--- a/src/stylesheets/modules/_colors.scss
+++ b/src/stylesheets/modules/_colors.scss
@@ -4,18 +4,18 @@ $light3: hsla(27, 10%, 83%, 0.801);
 $light4: hsla(27, 11%, 83%, 0.7);
 $light5: hsla(27, 11%, 83%, 0.6);
 
-$light6: #e5d2c2;
+$light6: hsla(27, 40%, 83%, 1);
 $light7: hsla(27, 41%, 83%, 0.9);
 $light8: hsla(27, 41%, 83%, 0.8);
 $light9: hsla(27, 41%, 83%, 0.7);
 
-$dark1: #313435;
+$dark1: hsl(195, 4%, 20%);
 $dark2: hsla(195, 4%, 20%, 0.9);
 $dark3: hsla(195, 4%, 20%, 0.8);
 $dark4: hsla(195, 4%, 20%, 0.7);
 $dark5: hsla(195, 4%, 20%, 0.6);
 
-$accent1: #a7cfdc;
+$accent1: hsl(195, 43%, 76%);
 $accent2: hsla(195, 43%, 76%, .9);
 $accent3: hsla(195, 43%, 76%, .8);
 $accent4: hsla(195, 43%, 76%, .7);
