show vaccines, vaccine actions/reducers

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -12,3 +12,15 @@ p, ul, li, a {
 h1 {
     font-size: $xx-large;
 }
+
+h2 {
+    font-size: $large;
+}
+
+h3 {
+    font-size: $medium;
+}
+
+p {
+    font-size: $small;
+}
