--- a/src/stylesheets/modules/_colors.scss
+++ b/src/stylesheets/modules/_colors.scss
@@ -1,21 +1,31 @@
-$light1: hsla(27, 11%, 83%, 1);
-$light2: hsla(27, 10%, 83%, 0.918);
-$light3: hsla(27, 10%, 83%, 0.801);
-$light4: hsla(27, 11%, 83%, 0.7);
-$light5: hsla(27, 11%, 83%, 0.6);
+$light1: hsla(27, 25%, 83%, 1);
+$light2: hsla(27, 25%, 83%, 0.918);
+$light3: hsla(27, 25%, 83%, 0.801);
+$light4: hsla(27, 25%, 83%, 0.7);
+$light5: hsla(27, 25%, 83%, 0.6);
+$light6: hsla(27, 25%, 83%, 0.5);
+$light7: hsla(27, 25%, 83%, 0.4);
+$light8: hsla(27, 25%, 83%, 0.3);
+$light8: hsla(27, 25%, 83%, 0.2);
 
-$light6: hsla(27, 40%, 83%, 1);
-$light7: hsla(27, 41%, 83%, 0.9);
-$light8: hsla(27, 41%, 83%, 0.8);
-$light9: hsla(27, 41%, 83%, 0.7);
 
-$dark1: hsl(195, 4%, 20%);
-$dark2: hsla(195, 4%, 20%, 0.9);
-$dark3: hsla(195, 4%, 20%, 0.8);
-$dark4: hsla(195, 4%, 20%, 0.7);
-$dark5: hsla(195, 4%, 20%, 0.6);
+$dark1: hsla(228, 11%, 9%, 1);
+$dark2: hsla(228, 11%, 9%, .9);
+$dark3: hsla(228, 11%, 9%, .8);
+$dark4: hsla(228, 11%, 9%, .7);
+$dark5: hsla(228, 11%, 9%, .6);
+$dark6: hsla(228, 11%, 9%, .5);
+$dark7: hsla(228, 11%, 9%, .4);
+$dark8: hsla(228, 11%, 9%, .3);
+$dark8: hsla(228, 11%, 9%, .2);
 
-$accent1: hsl(195, 43%, 76%);
-$accent2: hsla(195, 43%, 76%, .9);
-$accent3: hsla(195, 43%, 76%, .8);
-$accent4: hsla(195, 43%, 76%, .7);
+
+$accent1: hsla(217, 13%, 57%, 1);
+$accent2: hsla(217, 13%, 57%, .9);
+$accent3: hsla(217, 13%, 57%, .8);
+$accent4: hsla(217, 13%, 57%, .7);
+$accent5: hsla(217, 13%, 57%, .6);
+$accent6: hsla(217, 13%, 57%, .5);
+$accent7: hsla(217, 13%, 57%, .4);
+$accent8: hsla(217, 13%, 57%, .3);
+$accent8: hsla(217, 13%, 57%, .2);
