--- a/src/stylesheets/components/VaccineListing.scss
+++ b/src/stylesheets/components/VaccineListing.scss
@@ -1,7 +1,12 @@
 .vaccine-card {
     margin-bottom: 25px;
+    padding-left: 15px;
 }
 
 .vaccine-card h3 {
     margin-bottom: 5px;
+}
+
+.vaccine-card p {
+    padding-left: 20px;
 }
