--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,5 +1,8 @@
 @import "./modules/colors";
 @import "./partials/typography";
+@import './partials/buttons';
+@import './partials/input';
+
 
 h1, h2, h3, h4, h5, h6 {
     font-family: $heading;
