style profile, uservaccinelist and uservaccinelisting, set grid variables to match header of uservaccinelist and card of uservaccinglisting

--- a/src/stylesheets/components/Login.scss
+++ b/src/stylesheets/components/Login.scss
@@ -6,7 +6,7 @@
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    padding: $main-vert $main-hori;
+    padding: $main-div;
     background-color: $accent6;
     height: 100%;
 }
