--- a/src/stylesheets/partials/_box-shadow.scss
+++ b/src/stylesheets/partials/_box-shadow.scss
@@ -1,1 +1,7 @@
+@import '../modules/colors';
+
 $button-shadow: 0.5px 0.5px 3px 0 $dark1;
+
+$heading-bottom: 3px solid black;
+
+$table-heading: 0.5px dashed black;
